[project]
name = "wb-runs-mcp"
version = "0.1.0"
description = "MCP server for Weights & Biases — list projects, search runs, get metrics, compare experiments"
requires-python = ">=3.11"
dependencies = [
    "wandb>=0.19.0",
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wb_runs_mcp"]

[project.scripts]
wb-runs-mcp = "wb_runs_mcp:main"
